2017-06-20   Mark Hatle <mark.hatle@windriver.com>
	* doc/Makefile.am: Disable automatic generation of prelink.pdf

2017-06-19   Nathan Rossi <nathan@nathanrossi.com>
	* src/rtld/dl-tls.c, src/rtld/rtld.c: Add definitions/conf to
		support MicroBlaze, using glibc-2.24 as reference.

2016-08-19   Mark Hatle <mark.hatle@windriver.com>
	* README, testsuite/reloc8.sh, testsuite/reloc9.sh:
		update to expand on reloc8 and reloc9 failures

2016-08-17   Mark Hatle <mark.hatle@windriver.com>
	* README: Update to include a few known issues

2016-08-17   Mark Hatle <mark.hatle@windriver.com>
	* src/rtld/dl-open.c: Change to work with older compilers

2016-06-03   Dave Lerner <dave.lerner@windriver.com>
	* src/exec.c: New check_reorder_needed, section_reorder_fix functions

2016-03-22   Mark Hatle <mark.hatle@windriver.com>
	* src/gather.c, src/get.c: Fix LD_PRELOAD

2016-03-18   Donn Seeley <donn.seeley@windriver.com>
        * src/rtld/rtld.c: rewrite build_local_scope to ensure breadth-first
                processing
	* testsuite/order: Add test to verify prelink/prelink-rtld resolution
		order

2016-03-18  Mark Hatle <mark.hatle@windriver.com>
	* src/rtld: Add ability to debug scopes
	* src/rtld/rtld.h, src/dso.c: Fix compilation warning

2016-03-10  Mark Hatle <mark.hatle@windriver.com>
	* configure.ac, m4/libelf.m4, doc/Makefile.am, gelf/Makefile.am,
	  gelfx/Makefile.am, gelfx32/Makefile.am, patches/Makefile.am,
	  src/Makefile.am, src/rtld/Makefile.am, testsuite/Makefile.am:
		Update to avoid autoconf/automake warnings
	* Resync src/rtld to glibc-2.23

2015-10-29  Mark Hatle <mark.hatle@windriver.com>
	    Kyle McMartin  <kmcmartin@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>
	    Julian Brown   <julian@codesourcery.com>

	* testsuite/ifunc.h: Fix missing #
	* src/arch-arm.c (arm_prelink_conflict_rela): Add missing hunk
	that implemented R_ARM_IRELATIVE, and ifunc conflicts.

	See: https://bugzilla.redhat.com/show_bug.cgi?id=1009601
